Logo is too big for some reason on GitHub Pages. Trying to fix this.

--- a/style.css
+++ b/style.css
@@ -70,6 +70,11 @@ footer {
 	color: #888;
 }
 
+footer img {
+	width: 14px;
+	height: 14px;
+}
+
 a {
 	color: #4CAF50;
 	text-decoration: none;
@@ -78,11 +83,6 @@ a {
 
 a:hover {
 	color: #333;
-}
-
-.logo {
-	width: 14px;
-	height: 14px;
 }
 
 @media screen and (max-width: 1000px) {
